# tutor-finder

./: .env.example  .gitignore  README.md  alembic.ini  pyproject.toml
frontend/: index.html  login.html  profile.html  register.html  support.html
frontend/css/: style.css
frontend/js/: auth.js  profile.js  student.js  support.js  tutor.js
frontend/student/: apply.html  compare.html  profile.html  tutors.html
frontend/tutor/: dashboard.html  profile.html
migrations/: env.py
migrations/versions/: 138237419714_initial_migration.py  204fcc665ec0_add_message_and_proposed_dates_to_.py
src/: config.py  mail.py  main.py
src/api/: auth.py  students.py  support.py  tutors.py
src/db/: base.py
src/db/models/: __init__.py  application.py  profile.py  subject.py  user.py
